[gd_scene load_steps=23 format=3 uid="uid://tkgv3h3sywn1"]

[ext_resource type="Script" path="res://scripts/controller.gd" id="1_g2unk"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_2wm2v"]
[ext_resource type="Texture2D" uid="uid://ctrmlynlhvhuc" path="res://assets/sprites/Sprite-0001-Sheet.png" id="2_et52p"]
[ext_resource type="Texture2D" uid="uid://cjh5a1ff7vve7" path="res://assets/sprites/Sprite-0004-export.png" id="2_ysigi"]
[ext_resource type="Texture2D" uid="uid://cwxyx8x3qvvuc" path="res://assets/sprites/Sprite-0002-export.png" id="3_5n15m"]
[ext_resource type="Texture2D" uid="uid://cg8i4g1se77yd" path="res://assets/sprites/Sprite-0003-export.png" id="3_tkkra"]

[sub_resource type="AtlasTexture" id="AtlasTexture_te7bf"]
atlas = ExtResource("2_ysigi")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_210o3"]
atlas = ExtResource("2_ysigi")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8qeu"]
atlas = ExtResource("2_ysigi")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tl8k"]
atlas = ExtResource("2_ysigi")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3mk4"]
atlas = ExtResource("3_tkkra")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2hbk"]
atlas = ExtResource("2_et52p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxnbl"]
atlas = ExtResource("2_et52p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vlbg"]
atlas = ExtResource("3_tkkra")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_528p4"]
atlas = ExtResource("3_tkkra")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_umptx"]
atlas = ExtResource("3_tkkra")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5ais"]
atlas = ExtResource("3_5n15m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlo0q"]
atlas = ExtResource("3_5n15m")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqevd"]
atlas = ExtResource("3_5n15m")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1lka1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te7bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_210o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8qeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tl8k")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3mk4")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2hbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxnbl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vlbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_528p4")
}, {
"duration": 1000.0,
"texture": SubResource("AtlasTexture_umptx")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5ais")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlo0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqevd")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v4dux"]
radius = 27.0
height = 123.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ufq3f"]
radius = 5.5
height = 11.0

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_g2unk")

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("2_2wm2v")

[node name="sprite" type="AnimatedSprite2D" parent="Smoothing2D"]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_1lka1")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v4dux")

[node name="atk_area" type="Area2D" parent="."]
position = Vector2(60, -30)
scale = Vector2(8, 8)
collision_mask = 4

[node name="atk_hitbox" type="CollisionShape2D" parent="atk_area"]
shape = SubResource("CapsuleShape2D_ufq3f")
debug_color = Color(0.7, 0.606667, 0, 0.419608)

[node name="coyote_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="atk_area" to="." method="_on_atk_entered"]
[connection signal="timeout" from="coyote_timer" to="." method="on_coyote_timeout"]
